[skins] Dark skin: fix poor contrast on links inside notice alerts blocks (fix #1034)

--- a/client/css/ui/alerts.css
+++ b/client/css/ui/alerts.css
@@ -32,3 +32,10 @@
 .alerts .fa:first-child {
     margin-right: 0.5em;
 }
+
+body.dark .alerts a,
+body.dark .alerts a:hover,
+body.dark .alerts a:focus {
+    color: inherit;
+    text-decoration: underline;
+}
